# mcp-gennx

./: .env.example  .gitignore  GEN_NX_MCP_Server_Plan.md  README.md  pyproject.toml
data/: endpoint_subserver_map.json  toolset_definitions.json
src/mcp_gennx/: __init__.py  config.py  server.py
src/mcp_gennx/client/: __init__.py  gennx_client.py
src/mcp_gennx/schemas/: __init__.py  models.py  registry.py
src/mcp_gennx/schemas/raw/: db_ACTL.json  db_BMLD.json  db_BNGR.json  db_BODF.json  db_BUCK.json  db_CNLD.json  db_CONS.json  db_EIGV.json  db_ELEM.json  db_ELNK.json  db_ETMP.json  db_FRLS.json  db_GRUP.json  db_GSPR.json  db_GTMP.json  db_LCOM_conc.json  db_LCOM_gen.json  db_LCOM_seismic.json  db_LCOM_src.json  db_LCOM_steel.json  db_LCOM_stlcomp.json  db_MATL.json  db_MCON.json  db_NLCT.json  db_NMAS.json  db_NODE.json  db_NSPR.json  db_OFFS.json  db_PDEL.json  db_PRES.json  db_PSLT.json  db_RIGD.json  db_SECT_combined.json  db_SECT_common.json  db_SECT_composite_psc.json  db_SECT_composite_steel.json  db_SECT_dbuser.json  db_SECT_psc.json  db_SECT_psc_value.json  db_SECT_src.json  (+25 more)
src/mcp_gennx/servers/: __init__.py  analysis.py  boundary.py  loads.py  modeling.py  project.py
src/mcp_gennx/tools/: factory.py
src/mcp_gennx/utils/: descriptions.py
tests/: conftest.py  test_factory.py  test_integration.py  test_registry.py
