[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gennx"
version = "0.1.0"
description = "MCP server for GEN NX structural engineering software"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
mcp-gennx = "mcp_gennx:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gennx"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
